--- a/i18nbinder-ant/pom.xml
+++ b/i18nbinder-ant/pom.xml
@@ -3,11 +3,11 @@
     <parent>
         <groupId>org.omnaest.i18nbinder</groupId>
         <artifactId>i18nbinder-parent</artifactId>
-        <version>0.1.18-SNAPSHOT</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>i18nbinder-ant</artifactId>
     <url>http://code.google.com/p/i18n-binder/</url>
-    <name>i18nBinder-ant module</name>
+    <name>i18nbinder-ant module</name>
     <build>
         <plugins>
             <plugin>
