--- a/i18nbinder-core/pom.xml
+++ b/i18nbinder-core/pom.xml
@@ -3,16 +3,16 @@
     <parent>
         <groupId>org.omnaest.i18nbinder</groupId>
         <artifactId>i18nbinder-parent</artifactId>
-        <version>0.1.18-SNAPSHOT</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>i18nbinder-core</artifactId>
-    <name>i18nBinder-core module</name>
+    <name>i18nbinder-core module</name>
     <url>http://code.google.com/p/i18n-binder/</url>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.7</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -24,6 +24,34 @@
             <groupId>org.omnaest.utils</groupId>
             <artifactId>utils-apl-derived-core</artifactId>
             <version>0.2.11</version>
+        </dependency>
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>25.1-jre</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.11.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.11.0</version>
+        </dependency>
+        <!-- For Facade generation -->
+        <dependency>
+          <groupId>com.squareup</groupId>
+          <artifactId>javapoet</artifactId>
+          <version>1.11.1</version>
+        </dependency>
+
+        <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <version>3.10.0</version>
+          <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
