--- a/i18nbinder-core/pom.xml
+++ b/i18nbinder-core/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>i18nbinder-core</artifactId>
     <name>i18nbinder-core module</name>
     <url>http://code.google.com/p/i18n-binder/</url>
+
+    <licenses>
+      <license>
+        <name>Apache License, Version 2.0</name>
+        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
