--- a/i18nbinder-maven-plugin/pom.xml
+++ b/i18nbinder-maven-plugin/pom.xml
@@ -12,6 +12,14 @@
 
     <name>i18nbinder-maven-plugin Maven Mojo</name>
     <url>http://code.google.com/p/i18n-binder/</url>
+
+    <licenses>
+      <license>
+        <name>Apache License, Version 2.0</name>
+        <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
