--- a/i18nbinder-runtime/pom.xml
+++ b/i18nbinder-runtime/pom.xml
@@ -10,6 +10,12 @@
   <name>i18nbinder-runtime module</name>
   <url>http://code.google.com/p/i18n-binder/</url>
 
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
 
   <build>
     <plugins>
