--- a/i18nbinder-ant/src/main/resources/i18nBinder.properties
+++ b/i18nbinder-ant/src/main/resources/i18nBinder.properties
@@ -6,15 +6,25 @@
 
 
 # Folder where the property files are located
-i18nDirectory = i18n_src
+i18nDirectory = i18n
 
 # Filename of the XLS or XLSX file (Important: the file suffix decides about the file format!)
-xlsFilename = i18n_all.xlsx
+xlsFilename = i18n.xlsx
 
 # Filename of the created Java facade source file. The facade is only created if createJavaFacade is set to true
 javaFacadeFilename          = I18nFacade.java
-packageName                 =
+packageName                 = org.omnaest.i18nbinder.facade
 baseNameInTargetPlattform   =  
+facadeGenerationDir         = generated-sources
+
+# Whether to copy the facade accessor class and the base interface I18nBundleKey to the
+# generation target dir.
+# This is only useful if it is necessary to avoid a runtime dependency on i18nbinder-runtime.
+#copyFacadeAccessorClasses   = false
+
+# The name of the facade accessor class when copying the facade accessor classes.
+# This is only meaningful in combination with copyFacadeAccessorClasses.
+#facadeAccessorClassName     = I18n
 
 # If set to true the Java facade will generate all subtypes as new separated Java files instead of one single nested Java class
 externalizeTypes            = false
