--- a/i18nbinder-ant/src/main/resources/build.xml
+++ b/i18nbinder-ant/src/main/resources/build.xml
@@ -31,7 +31,7 @@
 
 	<!-- TARGETS -->
 	<target name="createXLSFile" description="This task creates a XLS file from a given fileset of property files.">
-		<i18nBinder xlsfilename="${xlsFilename}" logInfo="${logInfo}" localeFilterRegex="${localeFilterRegex}" fileNameLocaleGroupPattern="${fileNameLocaleGroupPattern}" fileNameLocaleGroupPatternGroupIndexList="${fileNameLocaleGroupPatternGroupIndexList}" createXLSFile="true" fileEncoding="${fileEncoding}">
+		<i18nBinder xlsfilename="${xlsFilename}" logInfo="${logInfo}" localeFilterRegex="${localeFilterRegex}" fileNameLocaleGroupPattern="${fileNameLocaleGroupPattern}" fileNameLocaleGroupPatternGroupIndexList="${fileNameLocaleGroupPatternGroupIndexList}" createXLSFile="true" fileEncoding="${fileEncoding}" useJavaStyleUnicodeExcaping="true">
 			<fileset dir="${i18nDirectory}">
 				<include name="**/*.properties" />
 			</fileset>
