Revamped Modifierhelper methods

--- a/i18nbinder-core/pom.xml
+++ b/i18nbinder-core/pom.xml
@@ -33,6 +33,11 @@
             <version>0.2.11</version>
         </dependency>
         <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-collections4</artifactId>
+          <version>4.2</version>
+        </dependency>
+        <dependency>
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>25.1-jre</version>
