--- a/i18nbinder-runtime/pom.xml
+++ b/i18nbinder-runtime/pom.xml
@@ -23,7 +23,7 @@
         <artifactId>i18nbinder-maven-plugin</artifactId>
         <version>0.2.0-SNAPSHOT</version>
         <configuration>
-          <generatedPackage>org.omnaest.i18nbinder.facade</generatedPackage>
+          <generatedPackage>de.poiu.kilt.facade</generatedPackage>
           <copyFacadeAccessorClasses>true</copyFacadeAccessorClasses>
         </configuration>
         <executions>
@@ -31,7 +31,7 @@
             <id>i18n-facade-generation</id>
             <phase>generate-sources</phase>
             <goals>
-              <goal>generateI18nFacade</goal>
+              <goal>create-facade</goal>
             </goals>
             <inherited>false</inherited>
             <configuration>
