--- a/i18nbinder-maven-plugin/pom.xml
+++ b/i18nbinder-maven-plugin/pom.xml
@@ -44,7 +44,8 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
-            <version>3.0-alpha-2</version>
+            <!--version>3.0-alpha-2</version-->
+            <version>2.2.1</version>
         </dependency>
     </dependencies>
 
