--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,12 @@
         <relativePath>parent/oss-parent-7.xml</relativePath>
     </parent>
 
-    <groupId>org.omnaest.i18nbinder</groupId>
-    <artifactId>i18nbinder-parent</artifactId>
+    <groupId>de.poiu.kilt</groupId>
+    <artifactId>kilt</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>i18nBinder-parent module</name>
     <description>Converts a whole i18n properties folder into a xls file and merge it back to the properties file</description>
-    <url>https://github.com/hupfdule/i18n-binder</url>
+    <url>https://github.com/hupfdule/kilt</url>
 
     <licenses>
       <license>
@@ -25,13 +24,13 @@
     </licenses>
 
     <scm>
-      <url>https://github.com/hupfdule/i18n-binder</url>
-      <connection>scm:git:git://github.com/hupfdule/i18n-binder.git</connection>
-      <developerConnection>scm:git:git@github.com://github.com/hupfdule/i18n-binder.git</developerConnection>
+      <url>https://github.com/hupfdule/kilt</url>
+      <connection>scm:git:git://github.com/hupfdule/kilt.git</connection>
+      <developerConnection>scm:git:git@github.com://github.com/hupfdule/kilt.git</developerConnection>
     </scm>
 
     <issueManagement>
-      <url>https://github.com/hupfdule/i18n-binder/issues</url>
+      <url>https://github.com/hupfdule/kilt/issues</url>
       <system>GitHub Issues</system>
     </issueManagement>
 
@@ -45,17 +44,17 @@
     </developers>
 
     <modules>
-        <module>i18nbinder-core</module>
-        <module>i18nbinder-maven-plugin</module>
-        <module>i18nbinder-ant</module>
-        <module>i18nbinder-runtime</module>
+        <module>kilt-core</module>
+        <module>kilt-maven-plugin</module>
+        <module>kilt-ant</module>
+        <module>kilt-runtime</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.omnaest.i18nbinder</groupId>
-                <artifactId>i18nbinder-core</artifactId>
+                <groupId>de.poiu.kilt</groupId>
+                <artifactId>kilt-core</artifactId>
                 <version>0.2.0-SNAPSHOT</version>
             </dependency>
             <dependency>
