Sanitized property names

--- a/kilt-ant/src/main/resources/kilt.properties
+++ b/kilt-ant/src/main/resources/kilt.properties
@@ -1,9 +1,10 @@
 ######################################################################################################
 ###                                                                                                ###
-###   PROPERTIES OF THE I18NBINDER                                                                 ###
+###   KILT PROPERTIES                                                                              ###
 ###                                                                                                ###
 ######################################################################################################
 
+## The following properties are used by all commands
 
 # Folder where the property files are located
 propertiesRootDirectory = i18n
@@ -11,14 +12,32 @@ propertiesRootDirectory = i18n
 # filter for property files to process (they must reside below propertiesRootDirectory)
 i18nIncludes = **/*.properties
 
+# filter for property files to exclude from the processing
 #i18nExcludes = 
 
-# Filename of the XLS or XLSX file (Important: the file suffix decides about the file format!)
-xlsFilename = i18n.xlsx
+# The file encoding of the property files
+propertyFileEncoding = ISO-8859-1
 
-# Filename of the created Java facade source file. The facade is only created if createJavaFacade is set to true
-generatedPackage            = de.poiu.kilt.facade
+
+#####################################################################################################
+## The following properties are only used for the 'export-xls' and 'import-xls' commands 
+
+# The XLS(X) file to export to / import (Important: the file suffix decides about the file format!)
+xlsFile = i18n.xlsx
+
+# Defines if properties with a assigned blank value in the XLS file are deleted 
+# when written back to the property files
+#deleteEmptyProperties = false
+
+
+#####################################################################################################
+## The following properties are only used for the 'create-facade' command
+
+# The directory to which the generated Java files are written.
 facadeGenerationDir         = generated-sources
+
+# The package into which to generate the facade files
+generatedPackage            = i18n.generated
 
 # Whether to copy the facade accessor class and the base interface I18nBundleKey to the
 # generation target dir.
@@ -28,14 +47,4 @@ facadeGenerationDir         = generated-sources
 # The name of the facade accessor class when copying the facade accessor classes.
 # This is only meaningful in combination with copyFacadeAccessorClasses.
 #facadeAccessorClassName     = I18n
-
-# The file encoding of the property files
-propertyFileEncoding = ISO-8859-1
-
-# The file encoding of the XLS file
-xlsFileEncoding = UTF-8
-
-# Defines if properties with a assigned blank value in the XLS file are deleted 
-# when written back to the property files
-deleteEmptyProperties = false
 
