--- a/kilt-runtime/pom.xml
+++ b/kilt-runtime/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.poiu.kilt</groupId>
     <artifactId>kilt</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
   </parent>
 
   <artifactId>kilt-runtime</artifactId>
