--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -19,19 +19,20 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
+      <groupId>de.poiu.fez</groupId>
+      <artifactId>fez</artifactId>
+      <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>de.poiu.apron</groupId>
+      <artifactId>apron</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
       <version>3.8</version>
-    </dependency>
-    <dependency>
-      <groupId>org.omnaest.utils</groupId>
-      <artifactId>utils-apl-derived-core</artifactId>
-      <version>0.2.11</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -66,9 +67,13 @@
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.10.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
