--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.poiu.kilt</groupId>
   <artifactId>kilt</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.3.0</version>
   <packaging>pom</packaging>
   <name>kilt</name>
   <description>Converts a whole i18n properties folder into a xls file and merge it back to the properties file</description>
@@ -21,7 +21,7 @@
     <url>https://github.com/hupfdule/kilt</url>
     <connection>scm:git:git://github.com/hupfdule/kilt.git</connection>
     <developerConnection>scm:git:git@github.com:hupfdule/kilt.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>kilt-0.3.0</tag>
   </scm>
 
   <issueManagement>
@@ -51,7 +51,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.release>8</maven.compiler.release>
+    <!--maven.compiler.release>8</maven.compiler.release-->
   </properties>
 
   <dependencyManagement>
