--- a/kilt-cli/pom.xml
+++ b/kilt-cli/pom.xml
@@ -18,7 +18,7 @@
   </licenses>
 
   <properties>
-    <mainClass>de.poiu.kilt.Kilt</mainClass>
+    <mainClass>de.poiu.kilt.cli.Kilt</mainClass>
   </properties>
 
   <dependencies>
