--- a/kilt-cli/src/main/resources/kilt.properties
+++ b/kilt-cli/src/main/resources/kilt.properties
@@ -18,6 +18,9 @@ i18nIncludes = **/*.properties
 # The file encoding of the property files
 propertyFileEncoding = ISO-8859-1
 
+# Print verbose output
+verbose
+
 
 #####################################################################################################
 ## The following properties are only used for the 'export-xls' and 'import-xls' commands 
@@ -48,3 +51,30 @@ generatedPackage            = i18n.generated
 # This is only meaningful in combination with copyFacadeAccessorClasses.
 #facadeAccessorClassName     = I18n
 
+
+#####################################################################################################
+## The following properties are only used for the 'reformat' command
+
+# The format string to use for formatting the key-value pairs.
+format = <key> = <value>\n
+
+# Whether to reformat the keys and values themselves by removing insignificant whitespace and linebreaks.
+reformatKeysAndValues = false
+
+
+#####################################################################################################
+## The following properties are only used for the 'reorder' command
+
+# Whether to reorder the key-value pairs alphabetically by the name of their
+# keys.
+# If this is set to true, "template" needs to be empty (or
+# unspecified)
+#byKey = false
+
+# Whether to reorder the key-value pairs in the same order as the key-value
+# pairs in this template file.
+# This parameter may not be given if "byKey" is set to true
+#template = i18n/messages.properties
+
+# How to handle comments and empty lines in the .properties files.
+attachCommentsTo = NEXT_PROPERTY
