--- a/kilt-core/pom.xml
+++ b/kilt-core/pom.xml
@@ -21,12 +21,12 @@
     <dependency>
       <groupId>de.poiu.fez</groupId>
       <artifactId>fez</artifactId>
-      <version>1.0.0</version>
+      <version>1.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>de.poiu.apron</groupId>
       <artifactId>apron</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
